Fix navbar when sidebar visible

--- a/src/themes/shared/_mq.css
+++ b/src/themes/shared/_mq.css
@@ -33,6 +33,10 @@
       pointer-events: none;
     }
 
+    .app-nav {
+      left: 0;
+    }
+
     main {
       &::before {
         width: 100%;
